// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkDialogWrapper dialog is not supported renders correctly with animation props 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper bpk-dialog-wrapper--polyfill"
    data-backpack-ds-component="DialogWrapper"
  >
    <div
      class="bpk-dialog-wrapper--backdrop"
      data-open="true"
      id="bpk-dialog-wrapper-polyfill"
    />
    <dialog
      aria-labelledby="bpk-dialog-wrapper"
      class="bpk-dialog-wrapper--container"
      data-open="true"
      id="bpk-dialog-wrapper"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="bpk-dialog-wrapper-contents"
      >
        Dialog content
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;

exports[`BpkDialogWrapper dialog is not supported renders correctly with class prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper bpk-dialog-wrapper--polyfill"
    data-backpack-ds-component="DialogWrapper"
  >
    <div
      class="bpk-dialog-wrapper--backdrop"
      data-open="true"
      id="bpk-dialog-wrapper-polyfill"
    />
    <dialog
      aria-labelledby="bpk-dialog-wrapper"
      class="bpk-dialog-wrapper--container test-class"
      data-open="true"
      id="bpk-dialog-wrapper"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="bpk-dialog-wrapper-contents"
      >
        Dialog content
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;

exports[`BpkDialogWrapper dialog is not supported renders correctly with closeOnX props 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper bpk-dialog-wrapper--polyfill"
    data-backpack-ds-component="DialogWrapper"
  >
    <div
      class="bpk-dialog-wrapper--backdrop"
      data-open="true"
      id="bpk-dialog-wrapper-polyfill"
    />
    <dialog
      aria-labelledby="bpk-dialog-wrapper"
      class="bpk-dialog-wrapper--container"
      data-open="true"
      id="bpk-dialog-wrapper"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="bpk-dialog-wrapper-contents"
      >
        Dialog content
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;

exports[`BpkDialogWrapper dialog is not supported renders correctly with minimum prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper bpk-dialog-wrapper--polyfill"
    data-backpack-ds-component="DialogWrapper"
  >
    <div
      class="bpk-dialog-wrapper--backdrop"
      data-open="true"
      id="bpk-dialog-wrapper-polyfill"
    />
    <dialog
      aria-labelledby="bpk-dialog-wrapper"
      class="bpk-dialog-wrapper--container"
      data-open="true"
      id="bpk-dialog-wrapper"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="bpk-dialog-wrapper-contents"
      >
        Dialog content
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;

exports[`BpkDialogWrapper dialog is supported renders correctly with animation props 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper"
    data-backpack-ds-component="DialogWrapper"
  >
    <dialog
      aria-labelledby="bpk-dialog-wrapper"
      class="bpk-dialog-wrapper--container"
      data-open="true"
      id="bpk-dialog-wrapper"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="bpk-dialog-wrapper-contents"
      >
        Dialog content
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;

exports[`BpkDialogWrapper dialog is supported renders correctly with class prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper"
    data-backpack-ds-component="DialogWrapper"
  >
    <dialog
      aria-labelledby="bpk-dialog-wrapper"
      class="bpk-dialog-wrapper--container test-class"
      data-open="true"
      id="bpk-dialog-wrapper"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="bpk-dialog-wrapper-contents"
      >
        Dialog content
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;

exports[`BpkDialogWrapper dialog is supported renders correctly with closeOnX props 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper"
    data-backpack-ds-component="DialogWrapper"
  >
    <dialog
      aria-labelledby="bpk-dialog-wrapper"
      class="bpk-dialog-wrapper--container"
      data-open="true"
      id="bpk-dialog-wrapper"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="bpk-dialog-wrapper-contents"
      >
        Dialog content
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;

exports[`BpkDialogWrapper dialog is supported renders correctly with minimum prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-dialog-wrapper"
    data-backpack-ds-component="DialogWrapper"
  >
    <dialog
      aria-labelledby="bpk-dialog-wrapper"
      class="bpk-dialog-wrapper--container"
      data-open="true"
      id="bpk-dialog-wrapper"
    >
      <div
        class="bpk-dialog-wrapper--contents"
        id="bpk-dialog-wrapper-contents"
      >
        Dialog content
      </div>
    </dialog>
  </div>
</DocumentFragment>
`;